plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'idea'
}

bootJar {
    archiveBaseName = 'ipa-api'
    archiveVersion = '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// Ensure environment variables are passed along
test {
    dependsOn cleanTest
    testLogging.showStandardStreams = true
}

dependencies {
    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)

    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-mail")
    implementation("org.springframework.boot:spring-boot-starter-validation")

    implementation("org.springframework.ldap:spring-ldap-core")
    implementation("org.springframework.security:spring-security-cas")

    implementation("io.jsonwebtoken:jjwt-api:0.13.0")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.13.0")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.13.0")

    implementation("org.flywaydb:flyway-core")
    implementation("org.flywaydb:flyway-mysql")
    implementation("com.mysql:mysql-connector-j")

    implementation("org.apache.poi:poi:5.5.1")
    implementation('org.apache.poi:poi-ooxml:5.5.1')
    implementation("jakarta.inject:jakarta.inject-api")
    implementation("jakarta.xml.bind:jakarta.xml.bind-api")
    implementation("org.apache.commons:commons-lang3")
    implementation("org.apache.httpcomponents.client5:httpclient5")
    implementation("org.javers:javers-core:7.9.0")
    implementation("software.amazon.awssdk:s3:2.40.8")

    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("junit:junit")
    testImplementation("com.h2database:h2")
    testImplementation('com.jayway.jsonpath:json-path')
}
